# yaml-common

./: .gitignore  Dockerfile  LICENSE  README.md  README.md.template  app.sh  common.py  libcommon.py  libmerge.py  main.py  pyproject.toml  requirements.txt  test.sh  usage.sh
.github/workflows/: generate-readme.yml
examples/: 2.yaml  common-expected.yaml  merged-1-expected.yaml  merged-1.yaml  merged-2-expected.yaml  merged-2.yaml  sample-1.yaml  sample-2.yaml  sample-common-expected.yaml  sample-common.yaml  sample-merged-1.yaml  sample-merged-2.yaml
tests/: test_main.py
tests/data/: 1.yaml  1_expected.yaml  2_expected.yaml  common.yaml  common_expected.yaml
yaml_common/: __main__.py  libcommon.py  main.py
